--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23'  # Fix Go version
+          go-version: '1.23'
 
       - name: Install Dependencies
         run: go mod tidy
@@ -42,10 +42,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0 .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/task-management:v1.0 .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/task-management:v1.0
 
   deploy:
     needs: docker-build-and-push
