--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,10 +42,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/task-management:v1.0 .
+        run: docker build -t ratheeshku/task-management:v1.0 .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/task-management:v1.0
+        run: docker push ratheeshku/task-management:v1.0
 
   deploy:
     needs: docker-build-and-push
