--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -19,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23'
+          go-version: '1.20'
 
       - name: Install Dependencies
         run: go mod tidy
@@ -33,7 +32,6 @@ jobs:
   docker-build-and-push:
     needs: build-and-test
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -42,15 +40,20 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ratheeshku/task-management:v1.0 .
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0 \
+            --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} \
+            --build-arg PORT=${{ secrets.PORT }} \
+            --build-arg JWTKEY=${{ secrets.JWTKEY }} \
+            --build-arg REDISHOST=${{ secrets.REDISHOST }} \
+            --build-arg REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push ratheeshku/task-management:v1.0
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0
 
   deploy:
     needs: docker-build-and-push
     runs-on: ubuntu-latest
-
     steps:
       - name: Trigger Render Deployment
         run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
