--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23.1'
+          go-version: '1.23'  # Fixed Go version format
 
       - name: Install Dependencies
         run: go mod tidy
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0 \
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/task-management:v1.0 \
             --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} \
             --build-arg PORT=${{ secrets.PORT }} \
             --build-arg JWTKEY=${{ secrets.JWTKEY }} \
@@ -49,7 +49,7 @@ jobs:
             --build-arg REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/task-management:v1.0
 
   deploy:
     needs: docker-build-and-push
