--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23'  # ✅ Corrected Go version format
+          go-version: '1.23.1' 
 
       - name: Install Dependencies
         run: go mod tidy
