--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,6 +42,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Debug Docker Username
+        run: echo "Docker Username: ${{ secrets.DOCKER_USERNAME }}"
+
       - name: Create .env file
         run: |
           echo "JWTKEY=${{ secrets.JWTKEY }}" >> .env
@@ -51,10 +54,10 @@ jobs:
           echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
 
       - name: Build and push Docker image
+        env:
+          IMAGE_NAME: "${{ secrets.DOCKER_USERNAME }}/task-management:v1.0"
         run: |
-          IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/task-management:v1.0"
           echo "🚀 Building and pushing Docker image: $IMAGE_NAME"
-          
           docker build -t "$IMAGE_NAME" .
           docker push "$IMAGE_NAME"
 
