--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,9 +54,8 @@ jobs:
           echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
 
       - name: Build and push Docker image
-        env:
-          IMAGE_NAME: "${{ secrets.DOCKER_USERNAME }}/task-management:v1.0"
         run: |
+          IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/task-management:v1.0"
           echo "🚀 Building and pushing Docker image: $IMAGE_NAME"
           docker build -t "$IMAGE_NAME" .
           docker push "$IMAGE_NAME"
