--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,12 +53,10 @@ jobs:
           echo "REDISHOST=${{ secrets.REDISHOST }}" >> .env
           echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image 
         run: |
-          IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/task-management:v1.0"
-          echo "🚀 Building and pushing Docker image: $IMAGE_NAME"
-          docker build -t "$IMAGE_NAME" .
-          docker push "$IMAGE_NAME"
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/userservice:v1.0 .
+          docker push ${{ secrets.DOCKER_USERNAME }}/userservice:v1.0
 
   deploy:
     needs: docker-build-and-push
