--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,8 +52,8 @@ jobs:
 
       - name: Build and push Docker image 
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/userservice:v1.0 .
-          docker push ${{ secrets.DOCKER_USERNAME }}/userservice:v1.0
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0 .
+          docker push ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0
 
   deploy:
     needs: docker-build-and-push
