--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,18 +14,18 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
+        
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.23'
-
+        
       - name: Install Dependencies
         run: go mod tidy
-
+        
       - name: Build
         run: go build -v ./...
-
+        
       - name: Run Tests
         run: go test -v ./... -cover
 
@@ -35,13 +35,13 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
+        
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
+        
       - name: Create .env file
         run: |
           echo "JWTKEY=${{ secrets.JWTKEY }}" > .env
@@ -49,11 +49,16 @@ jobs:
           echo "PORT=${{ secrets.PORT }}" >> .env
           echo "REDISHOST=${{ secrets.REDISHOST }}" >> .env
           echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
-
-      - name: Build and push Docker image 
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0 .
-          docker push ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/task_management:v1.0
 
   deploy:
     needs: docker-build-and-push
